# Varclass-Astrobox-rust

./: .gitignore  Cargo.toml  manifest.json  manifest_v2.json  readme.md  开发问题复盘.md
dist_fixed/: manifest.json
downloads/: com.azuma.syclass.release.1.6.0-r3-bf.rpk
legacy_src_backup/: cses.rs  model.rs  storage.rs  sync.rs  ui.rs  wakeup.rs  week_type.rs
src/: class_island.rs  cses.rs  ics.rs  lib.rs  lib.rs.bk  logger.rs  model.rs  sync.rs  wakeup.rs
src/ui/: build.rs  device.rs  event_handler.rs  mod.rs  state.rs
