[package]
name = "varclass-timetable"
version = "1.3.0"
edition = "2021"

[lib]
name = "varclass_timetable"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.47.0", features = ["async", "async-spawn"] }
tracing = "0.1"
tracing-subscriber = "0.3"
waki = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
